tests/ui/feature-gates/feature-gate-unboxed-closures-ufcs-calls.stderr
error[E0658]: use of unstable library feature `fn_traits`
  --> $DIR/feature-gate-unboxed-closures-ufcs-calls.rs:4:5
   |
LL |     Fn::call(&f, ());
   |     ^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `fn_traits`
  --> $DIR/feature-gate-unboxed-closures-ufcs-calls.rs:5:5
   |
LL |     FnMut::call_mut(&mut f, ());
   |     ^^^^^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `fn_traits`
  --> $DIR/feature-gate-unboxed-closures-ufcs-calls.rs:6:5
   |
LL |     FnOnce::call_once(f, ());
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29625 <https://github.com/rust-lang/rust/issues/29625> for more information
   = help: add `#![feature(fn_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
